# 20-deepsea-auv-sonar

./: README.md
NativePlugin/AUVPhysics/: CMakeLists.txt
NativePlugin/AUVPhysics/include/: AUVPhysicsAPI.h
NativePlugin/AUVPhysics/src/: AUVState.cpp  HydrodynamicsSolver.cpp  SonarSimulator.cpp
UnityProject/Assets/Scripts/: DeepseaAUV.asmdef
UnityProject/Assets/Scripts/AI/: AUVAutopilot.cs  BSplineSmoother.cs  ObstacleMapper.cs  PathTracker.cs  PathVisualizer.cs  RRTStarPlanner.cs
UnityProject/Assets/Scripts/Core/: AUVController.cs  AUVKeyboardInput.cs  MultibeamSonar.cs  SceneBootstrap.cs  SeafloorTerrain.cs  SonarPointCloud.cs
UnityProject/Assets/Scripts/Native/: HydrodynamicsBridge.cs
UnityProject/Assets/Scripts/UI/: AIStatusPanel.cs  BathymetryPanel.cs
UnityProject/Assets/Shaders/: BathymetryPointCloud.shader  MultibeamSonarRaycast.compute  SeafloorTerrain.shader
